--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="container text-center my-4">
-        <img src="img/1600w-fZN73w5PnEY.webp" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" />
+        <img src="img/1600w-fZN73w5PnEY.webp" alt="diego" class="rounded-circle" width="150" height="150" />
         <p class="lead">Eu sou Diego_</p>
         <h1>Eu faço engenharia</h1>
         <p>Sou Engenheira de Computação e ajudo a sociedade criando sites e aplicativos que vão ajudar elas a se desenvolverem em suas vidas sociais.</p>
